--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "strain-scout",
   "version": "0.0.0",
+  "main": "server.js", 
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -17,18 +18,25 @@
     "@angular/cli": "1.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "enhanced-resolve": "^3.3.0",
+    "express": "^4.16.2",
+    "morgan": "^1.9.0",
     "ng2-charts": "^1.6.0",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
-    "@angular/compiler-cli": "^4.0.0"
+    "serve-favicon": "^2.4.5",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@types/jasmine": "2.5.38",
