--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "strain-scout",
   "version": "0.0.0",
-  "main": "server.js", 
+  "main": "server.js",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -28,6 +28,7 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
     "enhanced-resolve": "^3.3.0",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
